# paper-feedder-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  中文指南.md
.github/workflows/: RSS+GMAIL.yml
doc/: 中文指南.md
output/2026-02-25/: gmail_fetched_papers.json  gmail_zotero_export.json  rss_exported_papers.json  rss_semantic_filtered_papers.json  rss_zotero_export.json
output/2026-02-27/: gmail_fetched_papers.json  rss_enriched_papers.json  rss_semantic_filtered_papers.json
output/2026-02-28/: gmail_fetched_papers.json  rss_exported_papers.json  rss_semantic_filtered_papers.json
output/2026-03-01/: rss_zotero_export.json
src/: __init__.py  __main__.py  server.py
src/adapters/: __init__.py  json.py  zotero.py
src/ai/: __init__.py  keyword_generator.py
src/client/: __init__.py  cli.py
src/config/: __init__.py  settings.py
src/filters/: __init__.py  ai_filter.py  keyword.py  pipeline.py
src/handlers/: __init__.py  prompts.py  tools.py
src/models/: __init__.py  enums.py  responses.py  schemas.py
src/paper_feed/core/: cli.py  config.py
src/services/: __init__.py  enrich.py  export.py  fetch.py  filter.py
src/sources/: __init__.py  crossref.py  gmail.py  gmail_parser.py  openalex.py  opml.py  rss.py  rss_parser.py
src/utils/: __init__.py  dedup.py  errors.py  text.py
tests/unit/: test_adapters.py  test_ai.py  test_cli.py  test_config.py  test_crossref.py  test_dedup_utils.py  test_filters.py  test_gmail_parser.py  test_gmail_source.py  test_openalex.py  test_pipeline_ai.py  test_rss_source.py
(+1 files in other folders)
