[project]
name = "paper-feedder-mcp"
version = "2.5.0"
description = "MCP server for academic paper collection, filtering, and enrichment from RSS feeds and Gmail alerts"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "academic", "papers", "rss", "gmail"]
dependencies = [
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "ezgmail>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.2.1,<2",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
zotero = [
    # Local zotero-mcp repository is used (set ZOTERO_MCP_PATH if needed).
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
paper-feedder-mcp = "src.client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.15",
]
